--- a/index.html
+++ b/index.html
@@ -11,18 +11,18 @@
     <title>App - Dashboard</title>
 </head>
 <body>
-    <header>
-        <div class="container">
-            <div class="login-user">
-                <i class="ph-user"></i>
-                <h2>Anna Maria</h2>
+    <div class="container">
+        <header>
+            <div class="container">
+                <div class="login-user">
+                    <i class="ph-user"></i>
+                    <h2>Anna Maria</h2>
+                </div>
             </div>
-        </div>
-    </header>
+        </header>
 
-    <main>
-        <div class="container">
-            <section class="sidebar">
+        <aside>
+            <div class="box">
                 <div class="dash">
                     <i class="ph-gauge"></i>
                 </div>
@@ -33,7 +33,10 @@
                     <a href="#"><i class="ph-wrench"></i></i></a>
                     <a href="#"><i class="ph-sign-out"></i></a>
                 </nav>
-            </section>
+            </div>
+        </aside>
+
+        <main>
             <div class="box">
         
                 <section class="content">
@@ -118,8 +121,8 @@
                 </div>
             </div>
 
-        </div>
-    </main>
+        </main>
+    </div><!--container-->
 
     <script src="https://unpkg.com/phosphor-icons"></script>
     <script src="./js/script.js"></script>
